swagger add auth
