# controller/auth/updateUser.js
@@ -1,18 +1,18 @@
 const bcrypt = require("bcrypt");
 
-const { User } = require("../../models/user");
+const {User} = require("../../models/user");
 
 const updateUser = async (req, res) => {
-  const { password } = req.body;
+  const {password} = req.body;
 
-  const { _id, password: oldPass } = req.user;
+  const {_id, password: oldPass} = req.user;
 
   const newPassword = password ? await bcrypt.hash(password, 10) : oldPass;
 
   const user = await User.findByIdAndUpdate(
     _id,
-    { ...req.body, password: newPassword },
-    { new: true }
+    {...req.body, password: newPassword},
+    {new: true}
   );
 
   res.json({
