# swagger.json
@@ -1,9 +1,9 @@
 {
   "openapi": "3.0.1",
   "info": {
-    "version": "1.0.0",
-    "title": "Task PRO",
-    "description": "Showing off swagger-ui-express",
+    "version": "1.1.0",
+    "title": "TaskPRO",
+    "description": "APIservice task manager - TaskPRO",
     "license": {
       "name": "MIT",
       "url": "https://opensource.org/licenses/MIT"
@@ -97,6 +97,35 @@
         }
       }
     },
+    "/auth/logout": {
+      "post": {
+        "tags": ["Auth"],
+        "summary": "Logout user",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "required": true,
+            "type": "string",
+            "description": "The token issued to the current user."
+          }
+        ],
+        "security": [{"Bearer": []}],
+
+        "responses": {
+          "204": {
+            "description": "User is logout"
+          },
+
+          "401": {
+            "description": "Missing header with authorization token."
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
     "/auth/current": {
       "get": {
         "tags": ["Auth"],
@@ -130,6 +159,102 @@
           }
         }
       }
+    },
+
+    "/auth/user": {
+      "patch": {
+        "tags": ["Auth"],
+        "summary": "Update profile user",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "required": true,
+            "type": "string",
+            "description": "The token issued to the current user."
+          }
+        ],
+
+        "requestBody": {
+          "description": "Registration's object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Information found.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetUserResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Missing header with authorization token."
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/auth/thema": {
+      "patch": {
+        "tags": ["Auth"],
+        "summary": "Ghange theme",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "required": true,
+            "type": "string",
+            "description": "The token issued to the current user."
+          }
+        ],
+        "requestBody": {
+          "description": "Thema change.",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ThemeRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Thema changed.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ThemeResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Missing header with authorization token."
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -141,37 +266,66 @@
           "name": {
             "type": "string",
             "description": "User's name",
-            "example": "project5"
+            "example": "mango"
           },
           "email": {
             "type": "string",
             "description": "User's email",
             "format": "email",
-            "example": "project5@mail.com"
+            "example": "mango@mail.com"
           },
           "password": {
             "type": "string",
             "description": "User's name",
-            "example": "project5555555"
+            "example": "mango123"
           }
         }
       },
       "RegistrationResponse": {
         "type": "object",
         "properties": {
-          "email": {
-            "type": "string",
-            "description": "User's email",
-            "format": "email"
-          },
-          "name": {
-            "type": "string",
-            "description": "User's name",
-            "example": "project5"
+          "data": {
+            "type": "object",
+            "description": "User's data",
+            "properties": {
+              "status": {
+                "type": "string",
+                "description": "response status",
+                "example": "created"
+              },
+              "code": {
+                "type": "integer",
+                "description": "Code",
+                "example": "201"
+              },
+              "user": {
+                "type": "object",
+                "description": "User data",
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "description": "name",
+                    "example": "mango"
+                  },
+                  "email": {
+                    "type": "string",
+                    "description": "email",
+                    "example": "mango@mail.com"
+                  }
+                }
+              }
+            }
           }
         },
 
-        "example": {"email": "project5@mail.com", "name": "project5"}
+        "example": {
+          "status": "created",
+          "code": 201,
+          "user": {
+            "name": "mango",
+            "email": "mango@mail.com"
+          }
+        }
       },
       "LoginRequest": {
         "type": "object",
@@ -181,48 +335,120 @@
             "type": "string",
             "description": "User's email",
             "format": "email",
-            "example": "project5@mail.com"
+            "example": "mango@mail.com"
           },
           "password": {
             "type": "string",
             "description": "User's name",
-            "example": "project5555555"
+            "example": "mango123"
+          }
+        }
+      },
+      "UpdateRequest": {
+        "type": "object",
+
+        "properties": {
+          "email": {
+            "type": "string",
+            "description": "User's email",
+            "format": "email",
+            "example": "mango@mail.com"
+          },
+          "name": {
+            "type": "string",
+            "description": "name",
+            "example": "mango"
+          },
+          "password": {
+            "type": "string",
+            "description": "User's name",
+            "example": "mango123"
+          },
+          "thema": {
+            "type": "string",
+            "description": "thema",
+            "example": "violet"
+          },
+          "avatarURL": {
+            "type": "string",
+            "description": "avatarURL",
+            "example": "//www.gravatar.com/avatar/cb7969c38a80489e114749a256e14a32"
+          }
+        }
+      },
+      "ThemeRequest": {
+        "type": "object",
+
+        "properties": {
+          "thema": {
+            "type": "string",
+            "description": "thema",
+            "format": "['dark', 'light', 'violet']",
+            "example": "dark"
           }
         }
       },
       "LoginResponse": {
         "type": "object",
         "properties": {
-          "_id": {
-            "type": "string",
-            "description": "User's id",
-            "example": "649732379ad5cfa7a5c5179b"
-          },
-          "name": {
-            "type": "string",
-            "description": "User's name",
-            "example": "project5"
-          },
-          "email": {
-            "type": "string",
-            "description": "User's email",
-            "format": "email",
-            "example": "project5@mail.com"
-          },
-          "thema": {
-            "type": "string",
-            "description": "User's thema - [dark, light, violet]",
-            "example": "dark"
-          },
-          "avatarURL": {
-            "type": "string",
-            "description": "User's avatar",
-            "example": "www.gravatar.com/avatar/0f34fefc5bc8c472a716e7b3dbd41682"
-          },
-          "token": {
-            "type": "string",
-            "description": "Bearer token",
-            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"
+          "data": {
+            "type": "object",
+            "description": "User's data",
+            "properties": {
+              "status": {
+                "type": "string",
+                "description": "response status",
+                "example": "OK"
+              },
+              "code": {
+                "type": "integer",
+                "description": "Code",
+                "example": "200"
+              },
+              "token": {
+                "type": "string",
+                "description": "Bearer token",
+                "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"
+              },
+              "user": {
+                "type": "object",
+                "description": "User data",
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "description": "email",
+                    "example": "mango@mail.com"
+                  },
+                  "name": {
+                    "type": "string",
+                    "description": "name",
+                    "example": "mango"
+                  },
+                  "thema": {
+                    "type": "string",
+                    "description": "thema",
+                    "example": "violet"
+                  },
+                  "avatarURL": {
+                    "type": "string",
+                    "description": "avatarURL",
+                    "example": "//www.gravatar.com/avatar/cb7969c38a80489e114749a256e14a32"
+                  }
+                }
+              }
+            }
+          }
+        },
+
+        "example": {
+          "status": "OK",
+          "code": 200,
+          "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0OTg4ZGFlNzRjMGViZjQ5OGM2NGZjNSIsImlhdCI6MTY4NzgyNDI4OCwiZXhwIjoxNjg3OTA3MDg4fQ.tHaujmuh6TnigFcVbrCjScMAxsncHiO4VWUBwuVHk_0",
+          "user": {
+            "email": "mango@gmail.com",
+            "name": "mango",
+            "thema": "violet",
+            "avatarURL": "//www.gravatar.com/avatar/cb7969c38a80489e114749a256e14a32"
           }
         }
       },
@@ -278,9 +504,47 @@
           }
         },
 
-        "example": {"email": "project5@mail.com", "name": "project5"}
+        "example": {
+          "status": "OK",
+          "code": 200,
+          "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0OTg4ZGFlNzRjMGViZjQ5OGM2NGZjNSIsImlhdCI6MTY4Nzc4NjgzMiwiZXhwIjoxNjg3ODY5NjMyfQ.EBxwiQFbtJwKdbGD58qGyFGEtSiG7KA1C1Xkwe6kNNw",
+          "user": {
+            "email": "novychenkoae@gmail.com",
+            "name": "novychenkoae",
+            "thema": "violet",
+            "avatarURL": "//www.gravatar.com/avatar/cb7969c38a80489e114749a256e14a32"
+          }
+        }
+      },
+      "ThemeResponse": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "object",
+            "description": "Thema",
+            "properties": {
+              "status": {
+                "type": "string",
+                "description": "Thema changed.",
+                "example": "OK"
+              },
+              "code": {
+                "type": "integer",
+                "description": "Code",
+                "example": "200"
+              },
+              "thema": {
+                "type": "string",
+                "description": "thema",
+                "thema": "dark"
+              }
+            }
+          }
+        },
+        "example": {"thema": "dark"}
       }
     },
+
     "securitySchemes": {
       "Bearer": {
         "type": "http",
